# kd-iot

./: KdIoT.sln  README.md
src/KdIoT.Server/: Dockerfile  KdIoT.Server.csproj  KdIoT.Server.http  KdIoT.Server.sln  Program.cs  docker-compose.yml
src/KdIoT.Server/Controllers/: IoTManagerController.cs  WeatherForecastController.cs
src/KdIoT.Server/Data/: AppDbContext.cs
src/KdIoT.Server/Migrations/: 20240304140323_init.Designer.cs  20240304140323_init.cs  20240311200745_init.Designer.cs  20240311200745_init.cs  20240314203143_init.Designer.cs  20240314203143_init.cs  AppDbContextModelSnapshot.cs
src/KdIoT.Server/Properties/: launchSettings.json
src/KdIoT.Server/Proto/: proto_broker_msgs.proto
src/KdIoT.Server/Protos/: mqttmsg.proto
src/KdIoT.Server/Services/: BrokerAccess.cs  SystemStatusService.cs
src/KdIoT.Server/rabbitmq-etc/: .gitignore
src/KdIoT.Server/rabbitmq-etc/conf.d/: 10-defaults.conf  30-mysettings.conf
src/iot-device/: Cargo.toml  build.rs
src/iot-device/.cargo/: config
src/iot-device/src/: engine.rs  functests.rs  main.rs
src/iot-device/src/engine/: engine.rs  mod.rs  net_connector.rs  spidisplay.rs
src/iot-device/src/proto/: mod.rs  mqttmsg.proto  proto_broker_msgs.proto
src/kditool/: Cargo.toml
src/kditool/src/: main.rs
src/kditool/src/proto/: mod.rs
src/proto/: proto_broker_msgs.proto
