[package]
name = "iot-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aht20 = "0.1.0"
bmp280 = "0.4.0"
clap = { version = "4.4.10", features = ["derive"] }
embedded-graphics = "0.6.2"
epd-waveshare = "0.5.0"
rppal = { version = "0.15.0", features = ["hal", "hal-unproven"] }
rumqttc = "0.23.0"
ssd1680 = "0.1.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
