[package]
name = "iot-device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-aht20 = "0.1.1"
bmp280 = "0.4.0"
clap = { version = "4.4.10", features = ["derive"] }
# embedded-graphics = "0.8.1"
embedded-graphics = "0.6.2"
# dht-embedded = "0.2.0"
ssd1680 = "0.1.0"
# epd-waveshare = "0.5.0"
# ssd1306 = "0.8.4"
rppal = { version = "0.17.1", features = ["hal", "hal-unproven"] }
rumqttc = "0.23.0"
sh1106 = "0.5.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync"] }
prost = "0.12.3"
# spidev = "0.6.0"

[build-dependencies]
prost-build = { version = "0.12.3" }