[package]
name = "kditool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
prost = "0.12.3"
prost-types = "0.12.3"
rumqttc = "0.24.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
prost-build = { version = "0.12.3" }
